--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
    <header>
      <nav class="nav-bar">
       <div class="logo">
-       <a href="home.html"><img class="cookie rotate" src="/imgs/midnight-morsels-logo.png"></a> 
+       <a href="home.html"><img class="cookie rotate" src="/imgs/midnight-morsels-logo.PNG"></a> 
       </div>
       <h3 class="nav-header">The Chocoholics Guide to College Baking</h3>
       <div class="nav-items">
