--- a/home.html
+++ b/home.html
@@ -7,9 +7,10 @@
     <title>College Baking Home</title>
     <link rel="stylesheet" href="css/style.scss">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="manifest" href="app.webmanifest">
     <link rel="stylesheet" href="https://use.typekit.net/gps7sux.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">  -->
   </head>
   <body>
@@ -24,24 +25,8 @@
         <a class="nav-padding" href="/TipsandTricks.html"><li>Tips and Tricks</li></a>
         <a class="nav-padding" href="/stories.html"><li>Stories</li></a>
       </div>
-      <!-- <div class="search">
-        <form action="/action_page.php">
-          <input type="text" placeholder="Search.." name="search">
-          <button class="srch-btn" type="submit"><span class="material-symbols-outlined">
-            search
-            </span></button>
-        </form>
-      </div> -->
      </nav>
    </header> 
-<!-- 
-   <div class="section-1">
-    <h1 class="title">The Chocoholics' Guide to College Baking</h1>
-   </div> -->
-<!-- 
-   <div class="section-2"></div> -->
-  
-
    <div class="section-3"></div>
 
 
