started adding the new text

--- a/stories.html
+++ b/stories.html
@@ -38,45 +38,33 @@
       <div class="story">
         <div class="story-cream">
             <h3>Karli</h3>
-            <p><b>Apple Pie</b></p>
-            <p>Grandma's apple pie was a cherished family tradition. The kitchen would fill with the scent of cinnamon and baked apples as she lovingly crafted the golden crust. Each slice carried the warmth of her kitchen and the sweet memories of cozy family gatherings. I am proud that Gabi has carried on the family tradition!</p>
-            <a href="ApplePie.html" class="stories-btn example_a example_a">Apple Pie Recipe</a>
+            <p><b>Brownies</b></p>
+            <p>One of my favorite traditions Gabi and our friends have is our weekly movie night. We all get together, eat snacks, catch up on our weeks, and the most important part is the baked goods Gabi makes for us. I remember one night Gabi was making brownies for the group and was in a hurry to get out the door, so she took them out of the oven early. The brownies were pretty gooey but they were so good, we ate them all anyway!</p>
+            <a href="Brownies.html" class="stories-btn example_a example_a">Brownie Recipe</a>
         </div>
         <div class="story-brown">
             <h3>Emily</h3>
             <p><b>Chocolate Chip Cookies</b></p>
-            <p>Gabi's brown butter chocolate chip cookies were legendary in our family. The nutty aroma of browned butter combined with gooey chocolate chips created a treat that vanished within minutes at every family reunion. The secret? Well you will jst have to go to the recipe to find out.</p>
+            <p>Every week all of our friends look forward to Tuesday night trivia at our local bar. We also look forward to Gabi’s pregame baked goods. Before we leave for trivia, we gather around Gabi’s oven and snatch up her famous chocolate chip cookies as fast as we can! I can’t think of a better way to have a pregame. </p>
             <a href="CCCookies.html" class="stories-btn example_a">Chocolate Chip Cookie Recipe</a>
         </div>
         <div class="story-cream">
             <h3>Sami</h3>
-            <p><b>Brownies</b></p>
-            <p>Gabi's fudgy brownies are the ultimate comfort food. Their dense chocolate goodness was a remedy for every tough day or celebration. No one could resist the temptation of sneaking into the kitchen when Gabi is baking her signature brownies.</p>
-            <a href="Brownies.html" class="stories-btn example_a">Brownie Recipe</a>
-        </div>
-        <div class="story-brown">
-            <h3>Gabi</h3>
-            <p><b>Crepes</b></p>
-            <p>In our house, Dad was the crepe master. Using a simple pancake mix, he'd whip up delicate crepes that transported us to a French boulangerie. The best part? Our customizable toppings—from Nutella to fresh berries—made breakfasts at home feel like a weekend brunch.</p>
-            <a href="Crepes.html" class="stories-btn example_a">Crepe Recipe</a>
+            <p><b>Mug Cake</b></p>
+            <p>When I’m at college, I miss my sister’s baking (and my sister too I guess)! I started to make her mug cake recipe in my dorm whenever I felt homesick, and whenever I eat it, I feel right at home.</p>
+            <a href="MugCake.html" class="stories-btn example_a">Mug Cake Recipe</a>
         </div>
         <div class="story-cream">
             <h3>Maia</h3>
-            <p><b>Oatmeal Raisin Cookies</b></p>
-            <p>Gabi's oatmeal raisin cookies were a symbol of love and warmth. The kitchen would fill with the sweet aroma of cinnamon as she baked these chewy delights. Each bite felt like a hug, and those cookies were the first to disappear from the cookie jar.</p>
-            <a href="OatmealRasinCookies.html" class="stories-btn example_a">Oatmeal Raisin Cookie Recipe</a>
+            <p><b>Sugar Cookies</b></p>
+            <p>Since we go to different schools we don’t get to see each other that often, but when we do come together I know Gabi won’t show up empty handed! Whether it be her sugar cookies or a whole warm apple pie, I know we’ll be catching up while eating up. </p>
+            <a href="SugarCookies.html" class="stories-btn example_a">Sugar Cookie Recipe</a>
         </div>
         <div class="story-brown">
             <h3>Steve</h3>
-            <p><b>Pumpkin Bread</b></p>
-            <p>Every fall, our house would be filled with the irresistible scent of Gabi's pumpkin bread. The moist, spiced loaf was a staple at our Thanksgiving table, and Gabi's recipe card is going to became a cherished heirloom passed down through the generations.</p>
-            <a href="PumpkinBread.html" class="stories-btn example_a">Pumpkin Bread Recipe</a>
-        </div>
-        <div class="story-cream">
-            <h3>Gabi</h3>
-            <p><b>Chocolate Lovers Trifle</b></p>
-            <p>For special occasions, Cousin Lily would whip up a chocolate trifle that was nothing short of a masterpiece. Layers of chocolatey goodness, whipped cream, and a sprinkle of secrets made it the star of every family gathering. The first spoonful was always met with exclamations of delight.</p>
-            <a href="ChocolateLoversTrifle.html" class="stories-btn example_a">Chocolate Lovers Trifle Recipe<a>
+            <p><b>Banana Bread</b></p>
+            <p>Date night is never complete without a slice of Gabi’s chocolatey banana bread. Cooking and baking are two things that brought Gabi and I together in the first place, so I always cherish when we get to share each other’s creations. </p>
+            <a href="BananaBread.html" class="stories-btn example_a">Banana Bread Recipe</a>
         </div>
       </div>
 
