changed footer and edited more text

--- a/Pudding.html
+++ b/Pudding.html
@@ -126,11 +126,11 @@
     </div>
     <footer>
       <div class="footer-icons">
-        <a href=mailto:"gabishorr@gmail.com"> <ion-icon name="mail"></ion-icon></a>
-        <a href="https://www.instagram.com/gabis.creations02/" target="_blank"> <ion-icon name="logo-instagram"></ion-icon></a>
-        <a href="https://www.gabriellashorr.com/home" target="_blank"><ion-icon name="document"></ion-icon></a>
+       <a href="home.html"><img class="footer-img" src="imgs/midnight-morsels-logo.PNG"></a>
+       <p class="footer-title">The Chocoholics Guide to College Baking</p>
+      <p class=" footer-sub">Site Designed and Developed By:</p>
+      <em class="footer-em">Gabriella Shorr - UCONN DMD BFA Student 2024</em>
       </div>
-      
     </footer>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
