--- a/Recipe.html
+++ b/Recipe.html
@@ -102,7 +102,7 @@
   <button class="btn" onclick="filterSelection('cookies')"> Cookies</button>
   <button class="btn" onclick="filterSelection('cakes')"> Cakes</button>
   <button class="btn" onclick="filterSelection('breads')"> Breads</button>
-  <button class="btn" onclick="filterSelection('Miscellaneous')"> Miscellaneous</button>
+  <button class="btn" onclick="filterSelection('Miscellaneous')"> Other Treats</button>
 </div>
 
 <div class="container">
@@ -231,11 +231,11 @@
 
 <footer>
   <div class="footer-icons">
-    <a href=mailto:"gabishorr@gmail.com"> <ion-icon name="mail"></ion-icon></a>
-    <a href="https://www.instagram.com/gabis.creations02/" target="_blank"> <ion-icon name="logo-instagram"></ion-icon></a>
-    <a href="https://www.gabriellashorr.com/home" target="_blank"><ion-icon name="document"></ion-icon></a>
+   <a href="home.html"><img class="footer-img" src="imgs/midnight-morsels-logo.PNG"></a>
+   <p class="footer-title">The Chocoholics Guide to College Baking</p>
+  <p class=" footer-sub">Site Designed and Developed By:</p>
+  <em class="footer-em">Gabriella Shorr - UCONN DMD BFA Student 2024</em>
   </div>
-  
 </footer>
 
 
