--- a/home.html
+++ b/home.html
@@ -91,32 +91,32 @@
         <h4>Lucy D</h4>
         <a href="Brownies.html"><p>Brownies</p></a>
         <p><em>Fantastic</em></p>
-        <p>"This brownie recipe is a testament to pure indulgence, with its rich chocolatey flavor and irresistible fudgy texture. The extra salt sprinkled on top creates a delightful contrast, enhancing the overall flavor profile with a perfect balance of sweet and salty. Each bite is a symphony of flavors and textures, making these brownies a true crowd-pleaser for any occasion."</p>
+        <p>“Gabi’s brownie recipe is to die for and so easy to make! She even adds a sprinkle of salt as the finishing touch, which elevates the brownies that much more. I love baking but I would have never thought of this. Baking is my favorite way to decompress after a long week of writing papers, taking exams, and overall college; I’m so glad I found Gabi’s website – it has all my new favorite recipes!”</p>
       </div>
       <div class="reviews">
         <h4>Sarah L</h4>
         <a href="CCCookies.html"><p>Chocolate Chip Cookies</p></a>
         <p><em>Phenomenal</em></p>
-        <p>"Indulging in the chocolate chip cookies from this cookbook was a game-changer for my college sweet tooth! These cookies elevate the classic recipe with the rich, nutty flavor of browned butter and an extra pinch of salt, creating a perfect balance between sweet and salty in every bite.!"</p>
+        <p>“I never baked that much growing up, but when I moved into my college apartment I decided to take up a new hobby. I started by making Gabi’s chocolate chip cookies and they were a game-changer for me! The first time I made them, I felt like a professional. The brown butter, the sea salt, and the chocolate chips make these some of the best cookies I’ve ever had – and I made them all by myself.”</p>
       </div>
       <div class="reviews">
         <h4>Joe N</h4>
         <a href="BananaBread.html"><p>Banana Bread</p></a>
         <p><em>Great</em></p>
-        <p>"This banana bread recipe is a true gem, thanks to the ingenious addition of sour cream that creates a moistness that is simply divine. The tangy richness of the sour cream perfectly complements the natural sweetness of the bananas, resulting in a loaf that is incredibly moist and bursting with flavor."</p>
+        <p>“I’m not a big fan of bananas, but I can’t get enough of Gabi’s banana bread recipe! The unique additions like sour cream, chocolate chips, and cinnamon pack this dessert with so much moisture and flavor that I don’t even think about the bananas in it. Trust me, if I like it, anyone will.”</p>
       </div>
     </div>
    </div>
 
 
-    <footer>
-      <div class="footer-icons">
-        <a href=mailto:"gabishorr@gmail.com"> <ion-icon name="mail"></ion-icon></a>
-        <a href="https://www.instagram.com/gabis.creations02/" target="_blank"> <ion-icon name="logo-instagram"></ion-icon></a>
-        <a href="https://www.gabriellashorr.com/home" target="_blank"><ion-icon name="document"></ion-icon></a>
-      </div>
-      
-    </footer>
+   <footer>
+    <div class="footer-icons">
+     <a href="home.html"><img class="footer-img" src="imgs/midnight-morsels-logo.PNG"></a>
+     <p class="footer-title">The Chocoholics Guide to College Baking</p>
+    <p class=" footer-sub">Site Designed and Developed By:</p>
+    <em class="footer-em">Gabriella Shorr - UCONN DMD BFA Student 2024</em>
+    </div>
+  </footer>
 
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script id="dsq-count-scr" src="//www-tcgtcollegebaking-com.disqus.com/count.js" async></script>
