--- a/OatmealRasinCookies.html
+++ b/OatmealRasinCookies.html
@@ -191,14 +191,16 @@
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </div>
+
     <footer>
       <div class="footer-icons">
-        <a href=mailto:"gabishorr@gmail.com"> <ion-icon name="mail"></ion-icon></a>
-        <a href="https://www.instagram.com/gabis.creations02/" target="_blank"> <ion-icon name="logo-instagram"></ion-icon></a>
-        <a href="https://www.gabriellashorr.com/home" target="_blank"><ion-icon name="document"></ion-icon></a>
+       <a href="home.html"><img class="footer-img" src="imgs/midnight-morsels-logo.PNG"></a>
+       <p class="footer-title">The Chocoholics Guide to College Baking</p>
+      <p class=" footer-sub">Site Designed and Developed By:</p>
+      <em class="footer-em">Gabriella Shorr - UCONN DMD BFA Student 2024</em>
       </div>
-      
     </footer>
+    
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 </html>
