--- a/TipsandTricks.html
+++ b/TipsandTricks.html
@@ -69,7 +69,7 @@
           </div>
           <div class="tips-box">
             <h4>Oil for Butter</h4>
-            <p>In a pinch, replace butter with vegetable oil or even coconut oil. This substitution works well in various recipes, especially when you're short on dairy products.</p>
+            <p>If you’re in a pinch, you can replace butter with vegetable oil or even coconut oil… This substitution works well in various recipes, especially when you're short on dairy products.</p>
           </div>
           <div class="tips-box">
             <h4> Creative Spice Substitutes</h4>
@@ -77,7 +77,7 @@
           </div>
           <div class="tips-box">
             <h4>Instant Coffee Flavor Boost</h4>
-            <p>Enhance the richness of chocolate desserts by adding a teaspoon of instant coffee to the batter. This trick intensifies the chocolate flavor without the need for extra ingredients.</p>
+            <p>Enhance the richness of chocolate desserts by adding a teaspoon of instant coffee to the batter. This trick intensifies the chocolate flavor without the need for extra ingredients....This trick intensifies the chocolate flavor without adding too many extra ingredients.</p>
           </div>
           <div class="tips-box">
             <h4>Customizable Mix-Ins</h4>
@@ -96,12 +96,13 @@
 
       <footer>
         <div class="footer-icons">
-          <a href=mailto:"gabishorr@gmail.com"> <ion-icon name="mail"></ion-icon></a>
-          <a href="https://www.instagram.com/gabis.creations02/" target="_blank"> <ion-icon name="logo-instagram"></ion-icon></a>
-          <a href="https://www.gabriellashorr.com/home" target="_blank"><ion-icon name="document"></ion-icon></a>
+         <a href="home.html"><img class="footer-img" src="imgs/midnight-morsels-logo.PNG"></a>
+         <p class="footer-title">The Chocoholics Guide to College Baking</p>
+        <p class=" footer-sub">Site Designed and Developed By:</p>
+        <em class="footer-em">Gabriella Shorr - UCONN DMD BFA Student 2024</em>
         </div>
-        
       </footer>
+
       <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
       <script>
         var words = document.getElementsByClassName('word');
