--- a/SugarCookies.html
+++ b/SugarCookies.html
@@ -155,14 +155,16 @@
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 <footer>
   <div class="footer-icons">
-   <a href="home.html"><img class="footer-img" src="imgs/midnight-morsels-logo.PNG"></a>
+   <a href="home.html"><img class="footer-img rotate" src="imgs/midnight-morsels-logo.PNG"></a>
    <p class="footer-title">The Chocoholics Guide to College Baking</p>
   <p class=" footer-sub">Site Designed and Developed By:</p>
   <em class="footer-em">Gabriella Shorr - UCONN DMD BFA Student 2024</em>
   </div>
 </footer>
+
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 </html>
