--- a/stories.html
+++ b/stories.html
@@ -70,7 +70,7 @@
 
       <footer>
         <div class="footer-icons">
-         <a href="home.html"><img class="footer-img" src="imgs/midnight-morsels-logo.PNG"></a>
+         <a href="home.html"><img class="footer-img rotate" src="imgs/midnight-morsels-logo.PNG"></a>
          <p class="footer-title">The Chocoholics Guide to College Baking</p>
         <p class=" footer-sub">Site Designed and Developed By:</p>
         <em class="footer-em">Gabriella Shorr - UCONN DMD BFA Student 2024</em>
